2010-07-14  Alan McGovern  <amcgovern@novell.com>

	* richtextbox.cpp: Propagate IsAttached through
	  RichTextBlock::Blocks manually as it is a dynamically
	  provided value (not a local or auto value) so the normal
	  logic misses it.

2010-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* designmode.h: New. Allow generation of IsInDesignModeProperty
	on the managed side and its existsance in the unmanaged side
	* error.h: Add NOT_IMPLEMENTED_EXCEPTION
	* inputscope.h: Add @CallInitialize to InputScope and InputScopeName
	* textbox.h: Add GenerateManagedAccessors=false and Validator=
	NullOrInDesignMode to InputScopeProperty and WatermarkProperty
	* uielement.h: Add GenerateManagedEvent=false to Manupulation* events
	* validators.h|cpp: Add NullOrInDesignMode that allow changes only
	if null or in design-more
	* Makefile.am: Add designmode.h to the build

2010-07-14  Alan McGovern  <amcgovern@novell.com>

	* panel.h:
	* media.h:
	* popup.h:
	* glyphs.h:
	* popup.cpp:
	* textbox.h:
	* media.cpp:
	* control.h:
	* panel.cpp:
	* uielement.h:
	* textbox.cpp:
	* control.cpp:
	* resources.h:
	* collection.h:
	* uielement.cpp:
	* richtextbox.h:
	* resources.cpp:
	* mediaelement.h:
	* richtextbox.cpp:
	* mediaelement.cpp:
	* dependencyobject.h:
	* frameworkelement.h:
	* dependencyobject.cpp:
	* frameworkelement.cpp: DependencyObject::IsAttached and
	  UIElement::IsLoaded mean exactly the same thing - the object
	  is in the live tree. Combine these two and refactor the
	  methods so that there's a SetIsAttached method and separate
	  'OnIsAttachedChanged' method so DOs can easily handle when
	  their attached status changes.

	* fontmanager.h:
	* fontmanager.cpp: Always treat the typefaces collection as
	  being attached. This means Glyphs and whatnot end up being
	  attached properly so glyphs download. 

	* xaml.cpp: Remove the hack which sets all elements to be
	  Attached as the glyph issue has been fixed properly now.
